Bug 1934636 - Revise Variant B breakpoints so logo doesn't overlap top sites when Sections are enabled  a=pascalc
Original Revision: https://phabricator.services.mozilla.com/D230882

Differential Revision: https://phabricator.services.mozilla.com/D231420

--- a/browser/components/newtab/content-src/components/Base/_Base.scss
+++ b/browser/components/newtab/content-src/components/Base/_Base.scss
@@ -231,7 +231,7 @@ main {
   .only-search  &,
   .only-topsites  & {
     @media (min-width: $break-point-large) {
-      position: fixed;
+      position: absolute;
       inset-block-end: var(--space-large);
       inset-inline-start: 0;
     }
